--- a/the_brief_cv.html
+++ b/the_brief_cv.html
@@ -108,7 +108,7 @@ high-performance computing and big data.</p>
 <h4 id="full-cv">Full CV</h4>
 
 <p>For a full CV including a publication list and detailed information
-about organisational work, teaching, and PhD supervision, please consult <a href="/cv">http://elsman.com/cv</a>.</p>
+about organisational work, teaching, and PhD supervision, please consult <tt>http://elsman.com/cv</tt>.</p>
 
   </div>
 </div>
